# vox

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.spark  Makefile  README.md  docker-compose.yml  pyproject.toml
adapters/vox-dia/: README.md  pyproject.toml
adapters/vox-dia/src/vox_dia/: __init__.py  adapter.py
adapters/vox-kokoro/: README.md  pyproject.toml
adapters/vox-kokoro/src/vox_kokoro/: __init__.py  adapter.py  common.py  torch_adapter.py
adapters/vox-microsoft/: README.md  pyproject.toml
adapters/vox-microsoft/src/vox_microsoft/: __init__.py  _hf_compat.py  speecht5_stt_adapter.py  speecht5_tts_adapter.py  vibevoice_tts_adapter.py
adapters/vox-openvoice/: README.md  pyproject.toml
adapters/vox-openvoice/src/vox_openvoice/: __init__.py  adapter.py
adapters/vox-parakeet/: README.md  pyproject.toml
adapters/vox-parakeet-nemo/: pyproject.toml
adapters/vox-parakeet-nemo/src/vox_parakeet_nemo/: __init__.py  adapter.py
adapters/vox-parakeet/src/vox_parakeet/: __init__.py  adapter.py  nemo_adapter.py
adapters/vox-piper/: README.md  pyproject.toml
adapters/vox-piper/src/vox_piper/: __init__.py  adapter.py
adapters/vox-qwen/: README.md  pyproject.toml
adapters/vox-qwen/src/vox_qwen/: __init__.py  asr_adapter.py  qwen_tts_worker.py  runtime.py  tts_adapter.py
adapters/vox-sesame/: README.md  pyproject.toml
adapters/vox-sesame/src/vox_sesame/: __init__.py  adapter.py
adapters/vox-voxtral/: README.md  pyproject.toml
adapters/vox-voxtral/src/vox_voxtral/: __init__.py  backends.py  protocol.py  runtime.py  stt_adapter.py  tts_adapter.py  voxtral_tts_worker.py
adapters/vox-whisper/: README.md  pyproject.toml
adapters/vox-whisper/src/vox_whisper/: __init__.py  adapter.py
adapters/vox-xtts/: README.md  pyproject.toml
adapters/vox-xtts/src/vox_xtts/: __init__.py  adapter.py
docker/: vox-entrypoint.sh
proto/: vox.proto
src/vox/: __init__.py  cli.py  logging_config.py  logging_context.py
src/vox/audio/: codecs.py  merger.py  pipeline.py  resampler.py
src/vox/conversation/: __init__.py  interrupt.py  session.py  state_machine.py  text_buffer.py  types.py
src/vox/core/: adapter.py  adapter_resolution.py  alias_resolution.py  cloned_voices.py  device_placement.py  errors.py  hf_runtime.py  ner.py  registry.py  runtime.py  scheduler.py  speechfile.py  store.py  types.py
src/vox/grpc/: conversation_servicer.py  health_servicer.py  interceptor.py  model_servicer.py  server.py  streaming_servicer.py  synthesis_servicer.py  transcription_servicer.py  vox_pb2.py  vox_pb2.pyi  vox_pb2_grpc.py
src/vox/operations/: __init__.py  conversation.py  defaults.py  errors.py  models.py  streaming_synthesis_longform.py  streaming_transcription.py  streaming_transcription_longform.py  synthesis.py  transcription.py  voices.py
src/vox/server/: app.py  middleware.py
src/vox/server/routes/: __init__.py  bidi.py  conversation.py  health.py  models.py  stream.py  synthesize.py  transcribe.py  voices.py
src/vox/streaming/: annotation.py  buffer.py  codecs.py  eou.py  mp3.py  opus.py  partials.py  pipeline.py  session.py  types.py  vad.py
tests/: conftest.py  fakes.py  test_adapter_estimates.py  test_adapter_package_metadata.py  test_adapter_resolution.py  test_alias_resolution.py  test_app.py  test_audio_chunking.py  test_audio_codecs.py  test_audio_pipeline.py  test_backchannel_session.py  test_bidi_routes.py  test_cli.py  test_codec_parity.py  test_conversation_commit_wire.py  test_conversation_grpc.py  test_conversation_session.py  test_conversation_streaming_extras.py  test_conversation_v1_extras.py  test_conversation_ws_route.py  test_device_placement.py  test_dia_adapter.py  test_eou_token_flush.py  test_grpc_servicers.py  test_hf_runtime.py  test_interrupt_classifier.py  test_kokoro_adapter.py  test_logging_config.py  test_microsoft_adapter.py  test_multilingual_chunking.py  test_ner.py  test_ner_adversarial.py  test_openvoice_adapter.py  test_operations_conversation.py  test_operations_models.py  test_operations_streaming_synthesis_longform.py  test_operations_streaming_transcription.py  test_operations_streaming_transcription_longform.py  test_operations_synthesis.py  test_operations_transcription.py  (+30 more)
