[project]
name = "vox"
version = "0.1.0"
description = "Universal local runtime for STT and TTS models"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "click>=8.1.0",
    "numpy>=1.26.0,<2.4",
    "soundfile>=0.13.1",
    "soxr>=0.5.0",
    "huggingface-hub>=0.25.0",
    "httpx>=0.27.0",
    "pydub>=0.25.1",
    "python-multipart>=0.0.18",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "grpcio-reflection>=1.60.0",
    "protobuf>=4.25.0",
]

[project.scripts]
vox = "vox.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
