[project]
name = "vox-runtime"
version = "0.2.2"
description = "Universal local runtime for STT and TTS models"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=16.0",
    "click>=8.1.0",
    "numpy>=1.26.0,<2.4",
    "soundfile>=0.13.1",
    "soxr>=0.5.0",
    "huggingface-hub>=0.25.0",
    "httpx>=0.27.0",
    "pydub>=0.25.1",
    "python-multipart>=0.0.18",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "grpcio-reflection>=1.80.0",
    "protobuf>=4.25.0",
]

[project.scripts]
vox = "vox.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vox"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
