[project]
name = "vox-dia"
version = "0.2.1"
description = "Dia TTS adapter for Vox"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "vox-runtime>=0.2.2",
    "transformers>=4.52.1",
    "torch>=2.1.0",
    "numpy>=1.26.0,<2.4",
    "soundfile>=0.13.1",
    "sentencepiece>=0.2.0",
]

[project.entry-points."vox.adapters"]
dia-tts-torch = "vox_dia.adapter:DiaAdapter"
dia = "vox_dia.adapter:DiaAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_dia"]
