[project]
name = "vox-kokoro"
version = "0.1.0"
description = "Kokoro TTS adapter for Vox"
requires-python = ">=3.11"
dependencies = [
    "vox>=0.1.0",
    "kokoro-onnx>=0.4.5,<0.5.0",
    "numpy>=1.26.0,<2.4",
    "huggingface-hub>=0.25.0",
]

[project.entry-points."vox.adapters"]
kokoro = "vox_kokoro.adapter:KokoroAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_kokoro"]
