[project]
name = "vox-kokoro"
version = "0.2.5"
description = "Kokoro TTS adapter for Vox"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "vox-runtime>=0.2.2",
    "kokoro-onnx>=0.4.5,<0.5.0",
    "kokoro>=0.9.4,<1.0.0",
    "numpy>=1.26.0,<2.4",
    "huggingface-hub>=0.25.0",
]

[project.entry-points."vox.adapters"]
kokoro-tts-onnx = "vox_kokoro.adapter:KokoroAdapter"
kokoro-tts-torch = "vox_kokoro.torch_adapter:KokoroTorchAdapter"
kokoro = "vox_kokoro.adapter:KokoroAdapter"
kokoro-torch = "vox_kokoro.torch_adapter:KokoroTorchAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_kokoro"]
