[project]
name = "vox-microsoft"
version = "0.1.0"
description = "Microsoft SpeechT5 and VibeVoice STT/TTS adapters for Vox"
requires-python = ">=3.11"
dependencies = [
    "vox>=0.1.0",
    "transformers>=4.51.3",
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "torch>=2.1.0",
    "numpy>=1.26.0,<2.4",
    "pillow>=10.0.0",
    "soundfile>=0.13.1",
    "sentencepiece>=0.2.0",
]

[project.entry-points."vox.adapters"]
speecht5-stt = "vox_microsoft.speecht5_stt_adapter:SpeechT5STTAdapter"
speecht5-tts = "vox_microsoft.speecht5_tts_adapter:SpeechT5TTSAdapter"
vibevoice-tts = "vox_microsoft.vibevoice_tts_adapter:VibeVoiceTTSAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_microsoft"]
