[project]
name = "vox-openvoice"
version = "0.2.1"
description = "OpenVoice TTS adapter for Vox"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "vox-runtime>=0.2.2",
    "numpy>=1.26.0,<2.4",
    "torch>=2.1.0",
    "librosa>=0.10.0",
    "soundfile>=0.13.1",
]

[project.entry-points."vox.adapters"]
openvoice-tts-torch = "vox_openvoice.adapter:OpenVoiceTTSAdapter"
openvoice = "vox_openvoice.adapter:OpenVoiceTTSAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_openvoice"]
