[project]
name = "vox-parakeet"
version = "0.2.6"
description = "NVIDIA Parakeet STT adapters for Vox"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "vox-runtime>=0.2.2",
    "onnx-asr[gpu,hub]>=0.10.0; platform_machine == 'x86_64'",
    "onnx-asr[hub]>=0.10.0; platform_machine != 'x86_64'",
    "numpy>=1.26.0,<2.4",
    "soundfile>=0.13.1",
]

[project.entry-points."vox.adapters"]
parakeet-stt-onnx = "vox_parakeet.adapter:ParakeetAdapter"
parakeet-stt-nemo = "vox_parakeet.nemo_adapter:ParakeetNemoAdapter"
parakeet = "vox_parakeet.adapter:ParakeetAdapter"
parakeet-nemo = "vox_parakeet.nemo_adapter:ParakeetNemoAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_parakeet"]
