[project]
name = "vox-piper"
version = "0.1.0"
description = "Piper TTS adapter for Vox"
requires-python = ">=3.11"
dependencies = [
    "vox>=0.1.0",
    "piper-tts>=1.2.0,<2.0.0",
    "numpy>=1.26.0,<2.4",
]

[project.entry-points."vox.adapters"]
piper = "vox_piper.adapter:PiperAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_piper"]
