[project]
name = "vox-qwen"
version = "0.1.0"
description = "Alibaba Qwen3-ASR and Qwen3-TTS adapters for Vox"
requires-python = ">=3.11"
dependencies = [
    "vox>=0.1.0",
    "transformers>=4.45.0",
    "torch>=2.1.0",
    "accelerate>=0.26.0",
    "numpy>=1.26.0,<2.4",
    "soundfile>=0.13.1",
    "librosa>=0.10.0",
]

[project.entry-points."vox.adapters"]
qwen3-asr = "vox_qwen.asr_adapter:Qwen3ASRAdapter"
qwen3-tts = "vox_qwen.tts_adapter:Qwen3TTSAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_qwen"]
