[project]
name = "vox-qwen"
version = "0.2.1"
description = "Alibaba Qwen3-ASR and Qwen3-TTS adapters for Vox"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "vox-runtime>=0.2.2",
    "torch>=2.1.0",
    "accelerate>=0.26.0",
    "numpy>=1.26.0,<2.4",
    "soundfile>=0.13.1",
    "librosa>=0.10.0",
]

[project.entry-points."vox.adapters"]
qwen3-stt-torch = "vox_qwen.asr_adapter:Qwen3ASRAdapter"
qwen3-tts-torch = "vox_qwen.tts_adapter:Qwen3TTSAdapter"
qwen3-asr = "vox_qwen.asr_adapter:Qwen3ASRAdapter"
qwen3-tts = "vox_qwen.tts_adapter:Qwen3TTSAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_qwen"]
