[project]
name = "vox-sesame"
version = "0.1.0"
description = "Sesame CSM 1B TTS adapter for Vox"
requires-python = ">=3.11"
dependencies = [
    "vox>=0.1.0",
    "transformers>=4.52.1",
    "torch>=2.1.0",
    "numpy>=1.26.0,<2.4",
]

[project.entry-points."vox.adapters"]
sesame = "vox_sesame.adapter:SesameTTSAdapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vox_sesame"]
